fix some tests when checking collections
Since openapi now returns an empty list instead of a null collection